Fix: Minor Design Align.

--- a/src/components/dashboard_view/styles/PendingTask.css
+++ b/src/components/dashboard_view/styles/PendingTask.css
@@ -96,7 +96,7 @@
 }
 
 .Pending-Task-State-Container {
-    width: 100%;
+    width: 97%;
     height: 30px;
     display: flex;
     justify-content: space-between;
