--- a/src/components/shared/styles/TopNavBar.css
+++ b/src/components/shared/styles/TopNavBar.css
@@ -6,7 +6,7 @@
     z-index: 1000;
     border-bottom: 1px solid #00000022;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -32,11 +32,30 @@
 }
 
 .Header-View-Info-Container{
-    width: calc(100% - 480px);
+    width: calc(100% - 500px);
     height: 60px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+.Header-Account-Workspace-Selector{
+    width: auto;
+    height: 40px;
+    padding: 0px 15px 0px 15px;
+    background-color: #06113c;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.Header-Account-Workspace-Label{
+    font-family: poppinsLight;
+    font-size: 14px;
+    color: #ffffff;    
 }
 
 .Header-Current-View-Label{
